# orchestrator

./: .gitignore  design.md  fs-check.py  harness  harness.py  harness.toml  htn-reference.md  nmss_init_summary_2026-04-09.md  orchestrate-scheduler.sh  orchestrate.md  send.sh  spacetime.json  spacetime.local.json
briefings/: biome-ui.md  cert-emu.md  hash-worker.md  trace-claude.md
docs/: install-orchestrate-skill.sh  supervision-tree-design.md  supervision-tree-review.md
docs/skills/: README.md
docs/skills/orchestrate/: SKILL.md
docs/skills/orchestrate/agents/: openai.yaml
docs/skills/orchestrate/references/: command-reference.md
harness-rs/: Cargo.toml  README.md
harness-rs/src/: lib.rs  main.rs
wiki/: Home.md  _Sidebar.md
wiki/nmss/: Artifacts.md  Cert-Emulator.md  Native-Harness.md  README.md  Timeline.md
