[package]
name = "harness"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spacetimedb = { version = "2.1.0", features = ["unstable"] }
log = "0.4"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
